<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.sinistral</groupId>
    <artifactId>proteus-project</artifactId>
    <packaging>pom</packaging>
    <version>0.8.5-SNAPSHOT</version>
    <name>Proteus Project</name>

    <description>Proteus is a blazing fast minimalist Java API server framework built atop Undertow.</description>

    <url>http://github.com/noboomu/proteus</url>

    <modules>
        <module>proteus-core</module>
        <module>proteus-openapi</module>
    </modules>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Joshua Lee Bauer</name>
            <email>bauer@sinistral.io</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/noboomu/proteus.git</connection>
        <developerConnection>scm:git:ssh://github.com/noboomu/proteus.git</developerConnection>
        <url>https://github.com/noboomu/proteus/tree/master</url>
        <tag>HEAD</tag>
    </scm>

    <properties>

        <changelog.version>1.99.0</changelog.version>
        <commons-io.version>2.19.0</commons-io.version>
        <commons-lang3.version>3.17.0</commons-lang3.version>
        <commons-text.version>1.13.1</commons-text.version>
        <guava.version>33.4.8-jre</guava.version>
        <guice.version>7.0.0</guice.version>
        <jackson.version>2.19.0</jackson.version>
        <jakarta-ws-rs.version>3.1.0</jakarta-ws-rs.version>
        <jansi.version>1.18</jansi.version>
        <java.version>21</java.version>
        <javapoet.version>1.13.0</javapoet.version>
        <logback.version>1.5.18</logback.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-deploy-plugin.version>3.0.0-M1</maven-deploy-plugin.version>
        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
        <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
        <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
        <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
        <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
        <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
        <nexus-staging-maven-plugin.version>1.7.0</nexus-staging-maven-plugin.version>
        <openapi.version>2.2.30</openapi.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <proteus.version>${project.version}</proteus.version>
        <reflections.version>0.10.2</reflections.version>
        <slf4j.version>2.0.17</slf4j.version>
        <snakeyaml.version>2.4</snakeyaml.version>
        <typesafe-config.version>1.4.2</typesafe-config.version>
        <undertow.version>2.3.17.Final</undertow.version>
        <woodstox.version>7.1.0</woodstox.version>
        <micrometer-core.version>1.9.1</micrometer-core.version>
        <jakarta-validation-api.version>3.1.1</jakarta-validation-api.version>
        <annotations.version>26.0.2</annotations.version>
        <junit-jupiter-api.version>5.12.2</junit-jupiter-api.version>
        <rest-assured.version>5.5.2</rest-assured.version>
        <jakarta.xml.bind-api.version>4.0.2</jakarta.xml.bind-api.version>
        <jaxb-runtime.version>4.0.3</jaxb-runtime.version>
        <sourcebuddy.version>2.0.0</sourcebuddy.version>
    </properties>


    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit-jupiter-api.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>io.sinistral</groupId>
                <artifactId>proteus-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>io.sinistral</groupId>
                <artifactId>proteus-openapi</artifactId>
                <version>${project.version}</version>
            </dependency>


        </dependencies>
    </dependencyManagement>

    <dependencies>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>${annotations.version}</version>
        </dependency>


        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${rest-assured.version}</version>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-core</artifactId>
            <version>${micrometer-core.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <repositories>
        <repository>
            <id>sonatype-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>

    <build>

        <plugins>


<!--            <plugin>-->
<!--                <artifactId>maven-jar-plugin</artifactId>-->
<!--                <version>${maven-jar-plugin.version}</version>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <configuration>-->
<!--                    <archive>-->
<!--                        <manifest>-->
<!--                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>-->
<!--                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>-->
<!--                        </manifest>-->
<!--                    </archive>-->
<!--                </configuration>-->
<!--            </plugin>-->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>${java.version}</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>

                <dependencies>
                    <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-engine</artifactId>
                        <version>${junit-jupiter-api.version}</version>
                    </dependency>
                </dependencies>

                <configuration>
                    <argLine>-Dconfig.file=src/test/resources/application.conf</argLine>
                    <argLine>-Dlogback.configuration=src/test/resources/logback-test.xml</argLine>

                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven-gpg-plugin.version}</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>gpg</executable>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>${nexus-staging-maven-plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>false</autoReleaseAfterClose>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven-release-plugin.version}</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                    <releaseProfiles>central</releaseProfiles>
                    <goals>deploy</goals>
                </configuration>
            </plugin>

        </plugins>

        <pluginManagement>

            <plugins>

<!--                <plugin>-->
<!--                    <groupId>org.apache.maven.plugins</groupId>-->
<!--                    <artifactId>maven-source-plugin</artifactId>-->
<!--                    <version>${maven-source-plugin.version}</version>-->
<!--                    <executions>-->
<!--                        <execution>-->
<!--                             <goals>-->
<!--                                <goal>jar-no-fork</goal>-->
<!--                            </goals>-->
<!--                        </execution>-->
<!--                    </executions>-->
<!--                </plugin>-->

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                    </configuration>
                    <version>${maven-javadoc-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                            <configuration>
                                <doclint>none</doclint>
                            </configuration>
                        </execution>
                    </executions>

                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>${maven-gpg-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>sign-artifacts</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>sign</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <executable>gpg</executable>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.sonatype.plugins</groupId>
                    <artifactId>nexus-staging-maven-plugin</artifactId>
                    <version>${nexus-staging-plugin.version}</version>
                    <extensions>true</extensions>
                    <configuration>
                        <serverId>ossrh</serverId>
                        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                        <autoReleaseAfterClose>false</autoReleaseAfterClose>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${maven-release-plugin.version}</version>
                    <configuration>
                        <autoVersionSubmodules>false</autoVersionSubmodules>
                        <tagNameFormat>v@{project.version}</tagNameFormat>
                        <releaseProfiles>ossrh</releaseProfiles>
                        <goals>deploy</goals>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <release>${java.version}</release>
                        <compilerVersion>${java.version}</compilerVersion>
                        <compilerArgument>-parameters</compilerArgument>
                        <compilerArgs>
                            <arg>-parameters</arg>
                            <arg>--add-opens=java.base/java.lang=ALL-UNNAMED --illegal-access=deny</arg>
                        </compilerArgs>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>enforce-versions</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <requireJavaVersion>
                                        <version>${java.version}</version>
                                    </requireJavaVersion>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>

                    <configuration>
                        <argLine>-Dconfig.file=src/test/resources/application.conf</argLine>
                        <argLine>-Dlogback.configuration=src/test/resources/logback-test.xml</argLine>
                    </configuration>
                </plugin>

            </plugins>

        </pluginManagement>

    </build>

    <profiles>

        <profile>
            <activation>
                <file>
                    <exists>pom.xml</exists>
                </file>
            </activation>
            <id>central</id>
            <build>
                <plugins>

<!--                    <plugin>-->
<!--                        <groupId>org.apache.maven.plugins</groupId>-->
<!--                        <artifactId>maven-source-plugin</artifactId>-->
<!--                        <version>${maven-source-plugin.version}</version>-->
<!--                        <executions>-->
<!--                            <execution>-->
<!--                                <id>attach-sources</id>-->
<!--                                <goals>-->
<!--                                    <goal>jar-no-fork</goal>-->
<!--                                </goals>-->
<!--                            </execution>-->
<!--                        </executions>-->
<!--                    </plugin>-->

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>${maven-javadoc-plugin.version}</version>
                        <configuration>
                            <source>${java.version}</source>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <configuration>
                                    <doclint>none</doclint>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${maven-gpg-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <executable>gpg</executable>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>${nexus-staging-maven-plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>false</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <name>Nexus Release Repository</name>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
        <downloadUrl>https://oss.sonatype.org/content/groups/public/io/sinistral/proteus-project</downloadUrl>

    </distributionManagement>

</project>